--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </li>
     </ul>
     <hr color="blue"/>
-    <h3 draggable="true">You can find my hobbies <a href="/capstone project 1/hobbies.html" draggable="true">HERE</a></h3>
-    <h3 draggable="true"><a href="/capstone project 1/contact.html" draggable="true">Contacts</a></h3>
+    <h3 draggable="true">You can find my hobbies <a href="hobbies.html" draggable="true">HERE</a></h3>
+    <h3 draggable="true"><a href="contact.html" draggable="true">Contacts</a></h3>
     <footer>© 2024 Tadanai Ferenc</footer>
 </body>
 </html>
